// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`osdLoadingIndicator is hidden by default 1`] = `
<ThinkingOrb
  aria-hidden={true}
  aria-label="Loading content"
  className="osdLoadingIndicator-hidden"
  data-test-subj="globalLoadingIndicator-hidden"
  paused={true}
  size={20}
  speed={0.8}
  state="composing"
/>
`;

exports[`osdLoadingIndicator is visible when loadingCount is > 0 1`] = `
<ThinkingOrb
  aria-hidden={false}
  aria-label="Loading content"
  className=""
  data-test-subj="globalLoadingIndicator"
  paused={false}
  size={20}
  speed={0.8}
  state="composing"
/>
`;
